Fix weapons with multiple ranges like Rod of covenant.

--- a/Warhammer/40k_calc.html
+++ b/Warhammer/40k_calc.html
@@ -1289,6 +1289,20 @@ Canoptek tail blades	Melee	6	2+	6	-1	1	Extra Attacks
 Abilities Invulnerable SaveMatter AbsorptionNecrodermisEnslaved Star God
 Rules Annihilation ProtocolReanimation ProtocolsDeadly Demise D6Feel No Pain 5+Extra AttacksAnti-BlastSustained Hits
 Keywords: C'tan Shard of the Void Dragon; Character; Epic Hero; Faction: Necrons; Fly; Monster`,
+			`Canoptek Doomstalker 
+Unit	M	T	SV	W	LD	OC
+Canoptek Doomstalker	8"	8	3+	12	8+	4
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Doomsday blaster	48"	D6+1	4+	14	-3	3	Blast, Heavy
+Twin gauss flayer	24"	1	4+	4	0	1	Lethal Hits, Rapid Fire 1, Twin-linked
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Doomstalker limbs	Melee	3	4+	6	0	1	-
+Abilities
+Damaged: 1-4 wounds remaining: While this model has 1-4 wounds remaining, each time this model makes an attack, subtract 1 from the Hit roll.
+Sentinel Construct: Each time you target this unit with the Fire Overwatch Stratagem, while resolving that Stratagem, hits are scored on unmodified Hit rolls of 5+.
+Invulnerable Save: This model has a 4+ invulnerable save.
+Rules Annihilation ProtocolReanimation ProtocolsDeadly Demise D3BlastHeavyLethal HitsTwin-linkedRapid Fire
+Keywords: Canoptek Doomstalker; Faction: Necrons; Vehicle; Walker`,
 			`Ghost Ark 
 Unit	M	T	SV	W	LD	OC
 Ghost Ark	10"	9	3+	14	7+	3
@@ -1300,6 +1314,47 @@ Abilities Invulnerable Save 4, Repair Barge
 Transport Ghost Ark
 Rules Annihilation ProtocolDeadly Demise D3Reanimation ProtocolsLethal HitsRapid Fire
 Keywords: Dedicated Transport; Faction: Necrons; Fly; Ghost Ark; Transport; Vehicle`,
+			`Hexmark Destroyer 
+Unit	M	T	SV	W	LD	OC
+Hexmark Destroyer	8"	5	3+	5	6+	1
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Enmitic disintegrator pistols	18"	6	2+	6	-2	1	Ignores Cover, Pistol
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Close combat weapon	Melee	4	3+	5	0	1	-
+Abilities
+Inescapable Death: Once per turn, one unit from your army with this ability can be targeted with the Fire Overwatch Stratagem for 0CP, even if you have already used that Stratagem on a different unit this phase. In addition, each time you target this unit with the Fire Overwatch Stratagem, while resolving that Stratagem, hits are scored on unmodified Hit rolls of 2+.
+Multi-threat Eliminator: Once per turn, in your opponent's Shooting phase, when an enemy unit makes a ranged attack that targets a friendly NECRONS unit within 3" of a model with this ability, after that enemy has shot, one model with this ability that is within 3" of that target can shoot as if it were your Shooting phase, but must target that enemy unit when doing so, and can only do so if that enemy unit is an eligible target.
+Ingrained Superiority: NECRONS model only. Each time a model in the bearer's unit makes an attack, on a Critical Wound, improve the Armour Penetration characteristic of that attack by 1.
+Rules Annihilation ProtocolDeep StrikeLone OperativeReanimation ProtocolsPistolIgnores Cover
+Keywords: Character; Destroyer Cult; Faction: Necrons; Hexmark Destroyer; Infantry`,
+			`Immortals 
+Models
+ 5x Immortal: Close combat weapon, Gauss blaster
+Unit	M	T	SV	W	LD	OC
+Immortals	5"	5	3+	1	7+	2
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Gauss blaster (x5)	24"	2	3+	5	-1	1	Lethal Hits
+Tesla carbine (x0)	24"	2	3+	5	0	1	Assault, Sustained Hits 2
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Close combat weapon (x5)	Melee	2	3+	4	0	1	-
+Abilities
+Implacable Eradication: Each time a model in this unit makes an attack, re-roll a Wound roll of 1. If the target of that attack is an enemy unit within range of an objective marker, you can re-roll the Wound roll instead.
+Rules Annihilation ProtocolReanimation ProtocolsLethal Hits
+Keywords: Battleline; Faction: Necrons; Immortals; Infantry`,
+			`Necron Warriors 
+Models
+ 5x Warrior w/ gauss flayer: Close combat weapon, Gauss flayer
+ 5x Warrior w/ gauss reaper: Close combat weapon, Gauss reaper
+Unit	M	T	SV	W	LD	OC
+Necron Warriors	5"	4	4+	1	7+	2
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Gauss flayer (x5)	24"	1	4+	4	0	1	Lethal Hits, Rapid Fire 1
+Gauss reaper (x5)	12"	2	4+	4	-1	1	Lethal Hits
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Close combat weapon (x10)	Melee	1	4+	4	0	1	-
+Abilities Their Number is Legion
+Rules Annihilation ProtocolReanimation ProtocolsLethal HitsRapid Fire
+Keywords: Battleline; Faction: Necrons; Infantry; Necron Warriors`,
 			// New Recruit adds (x20) to Gretchin but leaves out (x3) for Unit listing here :(
 			`Skorpekh Destroyers 
 Models
@@ -1311,6 +1366,20 @@ Skorpekh hyperphase weapons (x3)	Melee	4	3+	7	-2	2	-
 Abilities Whirling Onslaught
 Rules Annihilation ProtocolReanimation Protocols
 Keywords: Destroyer Cult; Faction: Necrons; Infantry; Skorpekh Destroyers`,
+			`Triarch Praetorians 
+Models
+ 5x Triarch Praetorian: Rod of covenant
+Unit	M	T	SV	W	LD	OC
+Triarch Praetorians	10"	5	3+	2	7+	1
+Ranged Weapons	Range	A	BS	S	AP	D	Keywords
+Particle caster (x0)	12"	3	3+	5	0	1	Devastating Wounds, Pistol
+Rod of covenant (x5)	12"	1	3+	5	-2	2	-
+Melee Weapons	Range	A	WS	S	AP	D	Keywords
+Rod of covenant (x5)	Melee	3	3+	5	-2	2	-
+Voidblade (x0)	Melee	4	3+	5	-2	1	-
+Abilities Relentless Combatants
+Rules Annihilation ProtocolReanimation ProtocolsDeep Strike
+Keywords: Faction: Necrons; Fly; Infantry; Triarch Praetorians`,
 
 			"- Orks -",
 			`Big Mek 
@@ -1756,7 +1825,6 @@ Keywords: Character; Epic Hero; Faction: Tyranids; Great Devourer; Hive Tyrant; 
 					weapon_keywords.push("SUSTAINED HITS 2")
 				}
 				const WS = geti(`skill${i}`) || 0
-				const AP = Math.abs(geti(`piercing${i}`))
 				// Total Obliteration: Each time a ranged attack made by a model in this unit targets a Monster or Vehicle model, you can re-roll the Hit roll, you can re-roll the Wound roll and you can re-roll the Damage roll.
 				const TOTAL_OBLITERATION = source_abilities.includes("TOTAL OBLITERATION") && R > 1 && (target_keywords.includes("MONSTER") || target_keywords.includes("VEHICLE"))
 				weapon_spreads[weapon] = {}
@@ -1929,9 +1997,15 @@ Keywords: Character; Epic Hero; Faction: Tyranids; Great Devourer; Hive Tyrant; 
 								}
 								// re, /, *, -, +, 0. XXX: - and + no more than 1? https://wahapedia.ru/wh40k10ed/the-rules/core-rules/#2.-Wound-Roll
 								// reroll
-								if (wound_roll === 1 && R > 2 && target_abilities.includes("RELIC OF THE MATRIARCH - SIMULACRUM OF THE ARGENT SHROUD (AURA)")) {
-									log('Relic of the Matriarch - Simulacrum of the Argent Shroud (Aura) reroll wound 1.')
-									wound_rerolls = (wound_rerolls + 1) % A
+								if (wound_roll === 1) {
+									if (R > 2 && source_abilities.includes("RELIC OF THE MATRIARCH - SIMULACRUM OF THE ARGENT SHROUD (AURA)")) {
+										log('Relic of the Matriarch - Simulacrum of the Argent Shroud (Aura) reroll wound 1.')
+										wound_rerolls = (wound_rerolls + 1) % A
+									}
+									if (source_abilities.includes("IMPLACABLE ERADICATION")) {
+										log("Implacable Eradication: Each time a model in this unit makes an attack, re-roll a Wound roll of 1. If the target of that attack is an enemy unit within range of an objective marker, you can re-roll the Wound roll instead.") // TODO: Target on objective.
+										wound_rerolls = (wound_rerolls + 1) % A
+									}
 								}
 								if (wound_rerolls > 0 && wound_roll < threshold) {
 									log(`Rerolling wound ${wound_roll} < ${threshold}`)
@@ -1941,6 +2015,13 @@ Keywords: Character; Epic Hero; Faction: Tyranids; Great Devourer; Hive Tyrant; 
 								if (wound_roll < threshold) {
 									log(`No wound. ${wound_roll} < ${threshold}`)
 									continue
+								}
+								let AP = Math.abs(geti(`piercing${i}`))
+								if (wound_roll === 6) {
+									if (source_abilities.includes("INGRAINED SUPERIORITY")) {
+										log(`INGRAINED SUPERIORITY: NECRONS model only. Each time a model in the bearer's unit makes an attack, on a Critical Wound, improve the Armour Penetration characteristic of that attack by 1.`)
+										AP += 1
+									}
 								}
 								// https://www.newrecruit.eu/wiki/wh40k-10e/warhammer-40%2C000-10th-edition/rules/devastating-wounds
 								// Each time an attack is made a [DEVASTATING WOUNDS] weapon, if that attack scores a Critical Wound, no saving throw of any kind can be made against that attack (including invulnerable saving throws but not Feel No Pain damage negation!?). Such attacks are only allocated to units after all other attacks made by the attacking unit have been allocated and resolved. XXX
@@ -2238,6 +2319,7 @@ Melee
 						"D": cols[6],
 						"keywords": cols[7].trim().split(SPLIT),
 					}
+					if (squad.weapons[cols[0]]) cols[0] = "Melee " + cols[0]
 					squad.weapons[cols[0]] = weapon
 				}
 				for (let word of ["Abilities", "Keywords", "Rules"]) {
